--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 
@@ -54,9 +54,9 @@
             <p class="comentario-video">Nos aseguramos de brindarte el mejor servicio</p>
         </div>
 
-        <div class="video-contenedor">
+        <div>
             <video autoplay loop controls muted src="../assets/video/video del local.mp4"></video>
-            <p class="comentario-superpuesto">Este es un video mostrando un poquito de nuestro local.</p>
+            <p class="comentario-video">Este es un video mostrando un poquito de nuestro local.</p>
         </div>
 
     </main>
